--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "illuminate/redis": "^8.62",
-        "laravel/lumen-framework": "^8.0"
+        "laravel/lumen-framework": "^8.0",
+        "tymon/jwt-auth": "^1.0.0-rc.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
