--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "flipbox/lumen-generator": "^8.2",
         "illuminate/redis": "^8.62",
         "laravel/lumen-framework": "^8.0",
+        "predis/predis": "^1.1",
         "tymon/jwt-auth": "^1.0.0-rc.2"
     },
     "require-dev": {
