--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,18 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "darkaonline/swagger-lume": "^8.0",
         "flipbox/lumen-generator": "^8.2",
         "illuminate/redis": "^8.62",
+        "laravel/horizon": "^5.7",
         "laravel/lumen-framework": "^8.0",
+        "laravel/ui": "^3.3",
+        "laravelista/lumen-vendor-publish": "^8.0",
+        "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
-        "tymon/jwt-auth": "^1.0.0-rc.2"
+        "tymon/jwt-auth": "^1.0.0-rc.2",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^11.3",
+        "zircote/swagger-php": "3.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
